.infra/k8s/webserver/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-deployment
  labels:
    tier: backend
    layer: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
      layer: webserver
  template:
    metadata:
      labels:
        tier: backend
        layer: webserver
    spec:
      containers:
      - name: webserver
        image: lucasminikel/web_server:v0.0.1
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
