.infra/k8s/webserver/service.yml
apiVersion: v1
kind: Service
metadata:
  name: webserver-service
  labels:
    tier: backend
    layer: webserver
spec:
  selector:
    tier: backend
    layer: webserver
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
